--- a/requirements.txt
+++ b/requirements.txt
@@ -33,6 +33,7 @@ packaging==20.4
 pandocfilters==1.4.2
 parso==0.7.0
 pickleshare==0.7.5
+Pillow==7.1.2
 prometheus-client==0.8.0
 prompt-toolkit==3.0.5
 Pygments==2.6.1
@@ -54,4 +55,5 @@ traitlets==4.3.3
 wcwidth==0.1.9
 webencodings==0.5.1
 widgetsnbextension==3.5.1
+wxPython==4.1.0
 zipp==3.1.0
